--- a/app/Resources/views/default/footer.html.twig
+++ b/app/Resources/views/default/footer.html.twig
@@ -1,8 +1,8 @@
 <footer class="page-footer blue">
     <div class="footer-copyright">
         <div class="container">
-            <strong>Vuelazos</strong> hecho con <i class="fa fa-lg fa-heart" id="cora"></i> por <a href="http://crispj.github.io">Cristian Pérez</a>
-            <a class="grey-text text-lighten-4 right" href="#!"><i class="fa fa-2x fa-github" id="github"></i></a>
+            <strong>Vuelazos</strong> hecho con <i class="fa fa-lg fa-heart" id="cora"></i> por Cristian Pérez
+            <a class="grey-text text-lighten-4" href="http://crispj.github.io"><i class="fa fa-2x fa-github" id="github"></i></a>
         </div>
     </div>
 </footer>
