--- a/web/assets/materialize-src/sass/components/_variables.scss
+++ b/web/assets/materialize-src/sass/components/_variables.scss
@@ -27,6 +27,7 @@
 //  22. Flow Text
 //  23. Collections
 //  24. Progress Bar
+//  25. TimePicker
 
 
 
@@ -311,3 +312,19 @@ $collection-link-color: $secondary-color !default;
 // ==========================================================================
 
 $progress-bar-color: $secondary-color !default;
+
+
+// 25. Time Picker
+// ==========================================================================
+$clockpicker-picker-box-background: #fff !default;
+$clockpicker-picker-box-date-display-background-color: color("teal", "lighten-1") !default;
+$clockpicker-primary-color: color("teal", "lighten-4") !default;
+$clockpicker-tick-background-color: rgba(color("teal", "base"), 0) !default;
+$clockpicker-tick-background-color-active: rgba(color("teal", "base"), 0.25) !default;
+$clockpicker-tick-color: #666 !default;
+$clockpicker-canvas-bearing-fill: rgba(color("teal", "darken-4"), 0.75) !default;
+$clockpicker-canvas-fg-fill: color("teal", "darken-4") !default;
+$clockpicker-canvas-bg-fill: rgba(color("teal", "base"), 0.25) !default;
+$clockpicker-canvas-bg-stroke: $clockpicker-canvas-bg-fill !default;
+$clockpicker-button-background-color: color("teal", "base") !default;
+$clockpicker-button-color: $button-flat-color !default;
