--- a/src/Proyecto2Bundle/Resources/views/Default/index.html.twig
+++ b/src/Proyecto2Bundle/Resources/views/Default/index.html.twig
@@ -26,6 +26,8 @@
             <div class="jumbotron" id="tagline">
                 {% include 'default/form.html.twig' %}
             </div>
+            <div  class="card-panel" id="resultados">
+            </div>
         </div>
     </div>
 
