listado de vuelos

--- a/app/Resources/views/vuelo/index.html.twig
+++ b/app/Resources/views/vuelo/index.html.twig
@@ -1,43 +1,68 @@
 {% extends 'base.html.twig' %}
+{% block header %}
+    <nav class="nav-extended blue blue-lighten-2">
+        <div class="nav-wrapper">
+            <a href="#" class="brand-logo"><img src="{{ asset("assets/img/logo.png") }}" alt="Logo"></a>
+            <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+            <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <li><a href="sass.html">Inicio</a></li>
+                <li><a href="badges.html">Admin</a></li>
+            </ul>
+            <ul class="side-nav" id="mobile-demo">
+                <li><a href="sass.html">Inicio</a></li>
+                <li><a href="badges.html">Admin</a></li>
+            </ul>
 
+            <ul class="tabs tabs-transparent">
+                <li class="tab"><a target="_self"  href="/">Vuelo</a></li>
+                <li class="tab"><a  target="_self" href="{{ path('vuelo_hotel') }}">Vuelo + Hotel</a></li>
+                <li class="tab"><a  target="_self" class="active" href="{{ path('vuelo_index') }}">Listado de vuelos</a></li>
+                <li class="tab"><a  target="_self" href="{{ path('vuelo_index') }}">Listado de hoteles</a></li>
+                <li class="tab"><a  target="_self" href="{{ path('vuelo_index') }}">Listado de clientes</a></li>
+            </ul>
+        </div>
+    </nav>
+{% endblock %}
 {% block body %}
-    <h1>Vuelos list</h1>
-
-    <table>
-        <thead>
-            <tr>
-                <th>Fecha</th>
-                <th>Precio</th>
-                <th>Hora</th>
-                <th>Idvuelo</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for vuelo in vuelos %}
-            <tr>
-                <td><a href="{{ path('vuelo_show', { 'id': vuelo.idVuelo }) }}">{{ vuelo.fecha|date('Y-m-d') }}</a></td>
-                <td>{{ vuelo.precio }}</td>
-                <td>{% if vuelo.hora %}{{ vuelo.hora|date('H:i:s') }}{% endif %}</td>
-                <td>{{ vuelo.idVuelo }}</td>
-                <td>
-                    <ul>
-                        <li>
-                            <a href="{{ path('vuelo_show', { 'id': vuelo.idVuelo }) }}">show</a>
-                        </li>
-                        <li>
-                            <a href="{{ path('vuelo_edit', { 'id': vuelo.idVuelo }) }}">edit</a>
-                        </li>
-                    </ul>
-                </td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+    <div class="container">
+        <div class="row">
+            <table class="table" id="tabla">
+                <thead>
+                <tr>
+                    <th>Fecha</th>
+                    <th>Precio</th>
+                    <th>Hora</th>
+                    <th>Tipo</th>
+                    <th>Acciones</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for vuelo in vuelos %}
+                    <tr>
+                        <td><a href="{{ path('vuelo_show', { 'id': vuelo.idVuelo }) }}">{{ vuelo.fecha|date('Y-m-d') }}</a></td>
+                        <td>{{ vuelo.precio }}</td>
+                        <td>{% if vuelo.hora %}{{ vuelo.hora|date('H:i:s') }}{% endif %}</td>
+                        <td>{{ vuelo.idTipo }}</td>
+                        <td>
+                            <ul>
+                                <li>
+                                    <a href="{{ path('vuelo_show', { 'id': vuelo.idVuelo }) }}">show</a>
+                                </li>
+                                <li>
+                                    <a href="{{ path('vuelo_edit', { 'id': vuelo.idVuelo }) }}">edit</a>
+                                </li>
+                            </ul>
+                        </td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
 
     <ul>
         <li>
-            <a href="{{ path('vuelo_new') }}">Create a new vuelo</a>
+            <a class="btn" href="{{ path('vuelo_new') }}">Crear nuevo vuelo</a>
         </li>
     </ul>
 {% endblock %}
