--- a/src/Proyecto2Bundle/Resources/views/Default/index.html.twig
+++ b/src/Proyecto2Bundle/Resources/views/Default/index.html.twig
@@ -16,6 +16,9 @@
             <ul class="tabs tabs-transparent">
                 <li class="tab"><a target="_self" class="active" href="/">Vuelo</a></li>
                 <li class="tab"><a  target="_self" href="{{ path('vuelo_hotel') }}">Vuelo + Hotel</a></li>
+                <li class="tab"><a  target="_self" href="{{ path('vuelo_index') }}">Listado de vuelos</a></li>
+                <li class="tab"><a  target="_self" href="{{ path('vuelo_index') }}">Listado de hoteles</a></li>
+                <li class="tab"><a  target="_self" href="{{ path('vuelo_index') }}">Listado de clientes</a></li>
             </ul>
         </div>
     </nav>
