ambas busquedas listas

--- a/src/Proyecto2Bundle/Resources/views/Default/form.html.twig
+++ b/src/Proyecto2Bundle/Resources/views/Default/form.html.twig
@@ -24,7 +24,7 @@
                     </div>
                     <div class="col-xs-6 form-group">
                         <label for="autocomplete-destino">Ciudad Destino</label>
-                        <select id="autocomplete-destino" class="form-control select select-primary select-block mbl" name="destino" >
+                        <select id="autocomplete-destino" onchange="getval(this);" class="form-control select select-primary select-block mbl" name="destino" >
                             </select>
                     </div>
                 </div>
