--- a/app/Resources/views/default/header.html.twig
+++ b/app/Resources/views/default/header.html.twig
@@ -19,8 +19,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Listas <span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
                             <li><a href="#" id="vuel">Vuelos</a></li>
-                            <li><a href="#">Hoteles</a></li>
-                            <li><a href="#">Clientes</a></li>
+                            <li><a href="#" id="clien">Clientes</a></li>
                             <li><a href="#">Reservaciones</a></li>
                         </ul>
                     </li>
