--- a/src/Proyecto2Bundle/Resources/views/Default/form2.html.twig
+++ b/src/Proyecto2Bundle/Resources/views/Default/form2.html.twig
@@ -8,7 +8,7 @@
         </div>
         <div class="form-group col-xs-6">
             <label for="cantidad"># Personas</label>
-            <input type="number" id="cantidad" class="form-control">
+            <input type="number" id="cantidad" name="cantidad" class="form-control">
         </div>
     </div>
 {% endblock %}
