--- a/src/Proyecto2Bundle/Resources/views/Default/result.html.twig
+++ b/src/Proyecto2Bundle/Resources/views/Default/result.html.twig
@@ -27,7 +27,7 @@
                 <td>{{ hotel  }}</td>
                 {%  endif %}
                 <td>
-                    <button class="btn btn-info">Reservar</button>
+                    <button class="btn btn-info btn-block" id="reser">Reservar</button>
                 </td>
             </tr>
         {% endfor %}
