--- a/app/Resources/views/default/header.html.twig
+++ b/app/Resources/views/default/header.html.twig
@@ -8,7 +8,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="/">
                     <img src="{{ asset("assets/img/logo.png") }}" alt="">
                 </a>
             </div>
